--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-<p>Hello world! This is HTML5 Boilerplate.</p>
+<p id="board">Hello world! This is HTML5 Boilerplate.</p>
 
 <button id="play">Play</button>
 
