play different sound on different weather

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-<p id="board">Hello world! This is HTML5 Boilerplate.</p>
-
-<button id="play">Play</button>
+<button id="play">Hear Your Weather!</button>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
