--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title></title>
+<title>Is Sydney sunny tomorrow?</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="css/normalize.min.css">
 <link rel="stylesheet" href="css/main.css">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/0.8.0/Tone.min.js" integrity="sha256-fm2w7CBtSWYFg/mD0yLNaxyF0LacFFqFGty9Zu9sENE=" crossorigin="anonymous"></script>
 
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
-<button id="play">Hear Your Weather!</button>
+<button id="play" class="mdl-button mdl-js-button mdl-js-ripple-effect">Is Sydney sunny tomorrow?</button>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
